--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,9 +1,11 @@
 name: GitHub Pages
 
 on:
-  push:
-    branches:
-      - main  # Set a branch to deploy
+#  push:
+#    branches:
+#      - main  # Set a branch to deploy
+  schedule:
+    - cron: '15 8 1 * *'
 
 jobs:
   deploy:
